SonicOrigins/Uncategorized/C#/ObjectRflParam.cs


    [StructLayout(LayoutKind.Explicit, Size = 32)]
    public struct ShadowSkyObjectResourceRflParam
    {
        [FieldOffset(0)]  public StaticObjectResourceRflParam staticObjectResourceRflParam;
        [FieldOffset(24)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 40)]
    public struct ShadowSkyObjectRflParam
    {
        [FieldOffset(0)] public StaticObjectRflParam staticObjectRflParam;
        [FieldOffset(8)] public ShadowSkyObjectResourceRflParam shadowSkyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 24)]
    public struct IslandObjectResourceRflParam
    {
        [FieldOffset(0)]  public CString model;
        [FieldOffset(16)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 32)]
    public struct IslandObjectRflParam
    {
        [FieldOffset(0)]  public IslandObjectResourceRflParam islandObjectResourceParam;
        [FieldOffset(24)] public float impostorScale;
    }

    [StructLayout(LayoutKind.Explicit, Size = 10608)]
    public struct ObjectRflParam
    {
        [FieldOffset(0)]     public BeetonObjectRflParam beetonObject;
        [FieldOffset(248)]   public MotoraObjectRflParam motoraObject;
        [FieldOffset(632)]   public BatabataObjectRflParam batabataObject;
        [FieldOffset(848)]   public RockyObjectRflParam rockyObject;
        [FieldOffset(1064)]  public FlickyObjectRflParam flickyObject;
        [FieldOffset(1328)]  public PeckyObjectRflParam peckyObject;
        [FieldOffset(1544)]  public RickyObjectRflParam rickyObject;
        [FieldOffset(1808)]  public CuckyObjectRflParam cuckyObject;
        [FieldOffset(2072)]  public PickyObjectRflParam pickyObject;
        [FieldOffset(2336)]  public PockyObjectRflParam pockyObject;
        [FieldOffset(2600)]  public TornadoObjectRflParam tornadoObject;
        [FieldOffset(2912)]  public EggroboObjectRflParam eggroboObject;
        [FieldOffset(3224)]  public MogumoguObjectRflParam mogumoguObject;
        [FieldOffset(3536)]  public ValkyneObjectRflParam valkyneObject;
        [FieldOffset(3848)]  public PatabataObjectRflParam patabataObject;
        [FieldOffset(3920)]  public MetalSonicObjectRflParam metalSonicObject;
        [FieldOffset(4232)]  public AntonObjectRflParam antonObject;
        [FieldOffset(4616)]  public AiaiObjectRflParam aiaiObject;
        [FieldOffset(4928)]  public LanderObjectRflParam landerObject;
        [FieldOffset(5240)]  public FlickyBlueObjectRflParam flickyBlueObject;
        [FieldOffset(5416)]  public FlickyGreenObjectRflParam flickyGreenObject;
        [FieldOffset(5592)]  public FlickyPinkObjectRflParam flickyPinkObject;
        [FieldOffset(5768)]  public FlickyRedObjectRflParam flickyRedObject;
        [FieldOffset(5944)]  public WaterSonicObjectRflParam waterSonicObject;
        [FieldOffset(6120)]  public SuperSonicObjectRflParam superSonicObject;
        [FieldOffset(6296)]  public FlyingTailsObjectRflParam flyingTailsObject;
        [FieldOffset(6472)]  public IslandCommonSonicObjectRflParam islandCommonSonicObject;
        [FieldOffset(6992)]  public IslandW2SonicObjectRflParam islandW2SonicObject;
        [FieldOffset(7304)]  public IslandW5SonicObjectRflParam islandW5SonicObject;
        [FieldOffset(7696)]  public IslandCommonTailsObjectRflParam islandCommonTailsObject;
        [FieldOffset(8032)]  public IslandCommonEggmanObjectRflParam islandCommonEggmanObject;
        [FieldOffset(8168)]  public IslandW1EggmanObjectRflParam islandW1EggmanObject;
        [FieldOffset(8256)]  public IslandCommonKnucklesObjectRflParam islandCommonKnucklesObject;
        [FieldOffset(8576)]  public IslandW5KnucklesObjectRflParam islandW5KnucklesObject;
        [FieldOffset(8656)]  public GlidingKnucklesObjectRflParam glidingKnucklesObject;
        [FieldOffset(8944)]  public IslandCommonAmyObjectRflParam islandCommonAmyObject;
        [FieldOffset(9264)]  public IslandW3AmyObjectRflParam islandW3AmyObject;
        [FieldOffset(9432)]  public IslandW4AmyObjectRflParam islandW4AmyObject;
        [FieldOffset(9712)]  public StarlightfloorObjectRflParam starlightfloorObject;
        [FieldOffset(10024)] public CarnivalDrumObjectRflParam carnivalDrumObject;
        [FieldOffset(10336)] public ShadowObjectRflParam shadowObject;
        [FieldOffset(10376)] public ShadowSkyObjectRflParam shadowSkyObject;
        [FieldOffset(10416)] public IslandObjectRflParam islandObject__arr0;
        [FieldOffset(10448)] public IslandObjectRflParam islandObject__arr1;
        [FieldOffset(10480)] public IslandObjectRflParam islandObject__arr2;
        [FieldOffset(10512)] public IslandObjectRflParam islandObject__arr3;
        [FieldOffset(10544)] public IslandObjectRflParam islandObject__arr4;
        [FieldOffset(10576)] public IslandObjectRflParam islandObject__arr5;
    }

}